# egguard

./: .gitignore  README.md  commands.txt  launch_egguard.sh
egguard/: CMakeLists.txt  package.xml
egguard_computer_vision/: CMakeLists.txt  README  package.xml  setup.cfg  setup.py
egguard_computer_vision/egguard_computer_vision/: __init__.py  egg_analysis.py  egg_detector.py  main.py  main_node.py  setup.py  simulation.py  test_image_publisher.py
egguard_computer_vision/launch/: egg_detection.launch.py  egguard_vision.launch.py
egguard_computer_vision/resource/: egguard_computer_vision
egguard_custom_interfaces/: CMakeLists.txt  README.md  package.xml
egguard_custom_interfaces/msg/: ManualNav.msg  Mode.msg
egguard_mode_manager/: README.md  package.xml  setup.cfg  setup.py
egguard_mode_manager/egguard_mode_manager/: initial_mode_publisher.py  qos_config.py
egguard_mode_manager/egguard_mode_manager/utils/: mode_qos_config.py  modes.py
egguard_mode_manager/launch/: initial_mode_publisher.launch.py
egguard_my_world/: CMakeLists.txt  README.md  package.xml
egguard_my_world/launch/: turtlebot3_egguard_my_world.launch.py
egguard_my_world/models/model_editor_models/Gallinas/: model.config  model.sdf
egguard_my_world/models/model_editor_models/Huevos/: model.config  model.sdf
egguard_my_world/models/model_editor_models/Obstaculos/: model.config  model.sdf
egguard_my_world/world/: burger.model
egguard_nav2_system/: README.md  package.xml  setup.cfg  setup.py
egguard_nav2_system/config/: my_map.pgm  my_map.yaml  my_map_old.pgm  my_nav2_params.yaml  rviz_config.rviz
egguard_nav2_system/egguard_nav2_system/: autonomous_controller.py  initial_pose_pub.py  manual_controller.py  manual_qos_config.py
egguard_nav2_system/egguard_nav2_system/utils/: directions.py  manual_nav_qos_config.py
egguard_nav2_system/launch/: autonomous_controller.launch.py  manual_controller.launch.py  provide_map.launch.py
egguard_predator_detector/: README.md  package.xml  setup.cfg  setup.py
egguard_predator_detector/egguard_predator_detector/: predator_detector.py
egguard_predator_detector/launch/: predator_detector.launch.py
egguard_world/: CMakeLists.txt  README.md  package.xml
egguard_world/launch/: egguard_world.launch.py
egguard_world/models/my_world/: model.config  model.sdf
egguard_world/models/turtlebot3_burger_pi/: model.config  model.sdf
egguard_world/world/: burger.model
local_training_YOLO/content/: entrenamiento_local.ipynb
my_world_egguard/: CMakeLists.txt  package.xml
my_world_egguard/launch/: turtlebot3_egguard_my_world.launch.py
my_world_egguard/models/my_world/: model.sdf
my_world_egguard/world/: burger.model
predator_inference/: Dockerfile  README.md  app.py  client_predict.py  running.txt
video_web_test/prueba_camara/: index.html  main.js
(+5 files in other folders)
