<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>egguard</name>
    <version>2.1.4</version>
    <description>
    ROS 2 packages for Egguard
    </description>
    <maintainer email="info@egguard.com">Egguard Inc.</maintainer>
    <license>Apache 2.0</license>

    <url type="repository">https://github.com/XXXXXXX</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>egguard_custom_interfaces</exec_depend>
    <exec_depend>egguard_mode_manager</exec_depend>
    <exec_depend>egguard_nav2_system</exec_depend>
    <exec_depend>egguard_my_world</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>